# svelte-rust-wasm-template

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml
src/: lib.rs  main.rs  util.rs
src/routes/: +page.svelte
